--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -1,22 +1,10 @@
-.page {
+.container {
   width: calc(100% - 60px);
   height: 100%;
   position: absolute;
   left: 60px; 
-}
-
-.container {
-  width: 100%;
-  will-change: contents;
-  height: 100%;
-  min-height: 566px;
-  position: absolute;
-  opacity: 0;
-  margin: 0 auto;
-  z-index: 1;
-  transform-style: preserve-3d;
-  animation: fadeIn 1s forwards;
-  animation-delay: 1s;
+  top: 0;
+  overflow: scroll;
 }
 
 .about-page,
@@ -72,8 +60,9 @@
 }
 
 @media only screen and (max-width: 550px) {
-  .page {
+  .container {
+    position: relative;
+    left: 0;
     width: 100%;
-    left: 0px;
   }
 }
