--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -1,11 +1,11 @@
 .nav-bar {
   background: #181818;
   width: 60px;
-  height: 100%;
-  position: absolute;
+  height: 100vh;
+  position: sticky;
   top: 0;
-  z-index: 3;
-  min-height: 500px;
+  z-index: 999;
+  min-height: 350px;
 
 
   --bar-width: 25px;
